--- a/src/app/app.component.scss
+++ b/src/app/app.component.scss
@@ -1,39 +1,56 @@
 .title-bar {
-    position: relative;
+  position: relative;
 }
 
 .onboarding {
-    position: absolute;
-    left: 0;
-    right: 0;
-    bottom: 0;
-    z-index: 1000;
-    display: flex;
-    justify-content: center;
-    align-items: center;
+  position: absolute;
+  left: 0;
+  right: 0;
+  bottom: 0;
+  z-index: 2;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 100vh;
+  width: 100vw;
+  overflow: hidden;
 }
+
 .menu {
-    position: absolute;
-    display: none;
-    background: white;
-    border: 1px solid #ccc;
-    box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
-    z-index: 1000;
-    padding: 5px;
-  }
-  
-  .menu ul {
-    list-style: none;
-    padding: 0;
-    margin: 0;
-  }
-  
-  .menu ul li {
-    padding: 10px;
-    cursor: pointer;
-  }
-  
-  .menu ul li:hover {
-    background: #f0f0f0;
-  }
-  
+  position: absolute;
+  display: none;
+  background: white;
+  border: 1px solid #ccc;
+  box-shadow: 2px 2px 10px rgba(0, 0, 0, 0.2);
+  z-index: 1000;
+  padding: 5px;
+}
+
+.menu ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
+}
+
+.menu ul li {
+  padding: 10px;
+  cursor: pointer;
+}
+
+.menu ul li:hover {
+  background: #f0f0f0;
+}
+
+.mobile-tab-bar {
+  position: fixed;
+  bottom: 0;
+  left: 0;
+  width: 100%;
+  background-color: var(--app-background);
+  box-shadow: 0 -2px 8px rgba(0, 0, 0, 0.1);
+  z-index: 3;
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  padding-block: 6px;
+}
