--- a/src/app/modals/preferences-modal/preferences-modal.component.scss
+++ b/src/app/modals/preferences-modal/preferences-modal.component.scss
@@ -1,4 +1,4 @@
-.preferences-modal {
+.modal {
   height: 100%;
   background: var(--secondary-background);
   box-shadow: 0 4px 12px var(--shadow-color);
@@ -18,12 +18,12 @@
     z-index: 10;
     justify-content: space-between;
     padding: 10px 10px 8px 10px;
-    min-height: 42px;
-    overflow-y: auto; /* Allow scrolling for content */
+    min-height: 30px;
 
     button {
       color: var(--app-text-color);
       background-color: transparent;
+      padding: 6px;
 
       &.active {
         background-color: var(--hover-color);
@@ -33,19 +33,62 @@
     .tabs {
       display: flex;
       gap: 2vw;
-      margin-inline: 16px;
+      justify-content: center;
 
       button {
         border-radius: 8px;
+        padding: 10px 8px;
       }
+      
+
+    }
+    h2 {
+      font-weight: 600;
+      font-size: 18px;
+      text-align: center;
+      align-self: center;
     }
   }
+
+
+    .bottom-tabs {
+      border-top: 1px solid #ddd;
+      display: flex;
+      flex-direction: row;
+      align-self: center;
+      justify-content: space-evenly;
+      width: 100%;
+
+
+      button {
+        flex-direction: column;
+        color: var(--app-text-color);
+        background-color: transparent;
+        gap: 0;
+        font-size: 14px;
+        font-weight: 600;
+        padding: 4px 8px;
+        margin-block: 4px;
+
+        mat-icon {
+          width: 14px;
+        }
+  
+        &.active {
+          background-color: var(--hover-color);
+        }
+      }
+    }
+
 
   .modal-content {
     padding: 16px;
     overflow: auto;
     position: relative;
     height: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
 
     .tab-content {
       width: 100%;
@@ -99,10 +142,10 @@
       }
     }
 
-    .app-backup {
-      display: flex;
-      flex-direction: column;
-      gap: 10px;
+    .reset {
+      width: 90%;
+      margin-top: 16px;
+            
     }
   }
 }
